fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-026-e6df42a1c0.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Box boxSize="100%">
  <Box flex="1" h="50px" w="100%" />
</Box>"
