fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-027-2373d0fb1b.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box aspectRatio="1.33" boxSize="100%" />"
