fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-029-dd01228f04.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  color="#000"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  h="20px"
  letterSpacing="0px"
  lineHeight="1.5px"
  w="100px"
>
  Text with {"{"}braces{"}"} {"&"} {"<"}tags{">"}
</Text>"
