fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-030-f4528f2a74.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  color="#000"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  h="20px"
  letterSpacing="0px"
  lineHeight="1.5px"
  w="100px"
>
  {"  "}spaced{"  "}
</Text>"
