fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-033-4f42f0cabb.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="80px" w="120px" />"
