fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-034-e25e34d3de.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" px="16px" py="8px" w="100px" />"
