fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-035-1d66b429cf.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="40px" p="12px" w="80px" />"
